--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -13,7 +13,7 @@
     <td><%=h order.name %></td>
     <td><%=h order.address %></td>
     <td><%=h order.email %></td>
-    <td><%=h order.pay_type %></td>
+    <td><%=h order.pay_typem %></td>
     <td><%= link_to 'Show', order %></td>
     <td><%= link_to 'Edit', edit_order_path(order) %></td>
     <td><%= link_to 'Destroy', order, :confirm => 'Are you sure?', :method => :delete %></td>
