--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :email %>
   </p>
   <p>
-    <%= f.label :pay_type %><br />
-    <%= f.text_field :pay_type %>
+    <%= f.label :pay_typem %><br />
+    <%= f.text_field :pay_typem %>
   </p>
   <p>
     <%= f.submit 'Create' %>
