--- a/app/views/layouts/store.html.erb
+++ b/app/views/layouts/store.html.erb
@@ -13,15 +13,24 @@
 	</div>
 	<div id="columns">
 	  <div id="side">
-		<div id="cart">
+		  <% if @cart %>	
 			<% hidden_div_if(@cart.items.empty?, :id => "cart" ) do %>
 			<%= render(:partial => "cart" , :object => @cart) %>
 			<% end %>
-		</div>
+		  <% end %>
 		<%= link_to 'Nachalo', {:controller => "store", :action => 'index'} %><br />
 		<a href="http://www.google.com">Google it</a><br />
 		<a href="http://www..../news">Novini</a><br />
 		<a href="http://www..../contact">Kontakti</a><br />
+
+		<% if session[:user_id] %>
+			<br />
+			<%= link_to 'Orders', :controller => 'orders' %><br />
+			<%= link_to 'Products', :controller => 'products' %><br />
+			<%= link_to 'Users', :controller => 'users' %><br />
+			<br />
+			<%= link_to 'Logout', :controller => 'admin', :action => 'logout' %><br />
+		<% end %>
 	  </div>
 	  <div id="main">
 	    <% if flash[:notice] -%>
